--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
